--- a/WebApp3/Pages/SignIn.razor
+++ b/WebApp3/Pages/SignIn.razor
@@ -1,4 +1,4 @@
-﻿@inject IJSRuntime _jsRuntime
+@inject IJSRuntime _jsRuntime
 @inject NavigationManager _navigationManager
 @inject LocalStorage _localStorage
 
@@ -15,11 +15,7 @@
         {
             // get user info
             var userInfo = await _localStorage.GetItem<Dictionary<string, string>>("userInfo"); 
-            if (userInfo != null) // user info found
-            {
-                await _jsRuntime.InvokeVoidAsync("alert", "You are already logged-in.");
-            }
-            else // parse callback response
+            if (userInfo == null)
             {
                 var url = HttpUtility.ParseQueryString(new Uri(_navigationManager.Uri).Query);
                 var app = HttpUtility.UrlDecode(HttpUtility.UrlEncode(url["app"]));
@@ -27,8 +23,6 @@
                 var name = HttpUtility.UrlDecode(HttpUtility.UrlEncode(url["name"]));
                 var email = HttpUtility.UrlDecode(HttpUtility.UrlEncode(url["email"]));
                 var picture = HttpUtility.UrlDecode(HttpUtility.UrlEncode(url["picture"]));
-                // purge user info
-                await _localStorage.RemoveItem("userInfo");
                 // store user data
                 userInfo = new Dictionary<string, string>();
                 userInfo.Add("username", $"{name} @ {app}");
@@ -38,7 +32,6 @@
                 userInfo.Add("email", email);
                 userInfo.Add("picture", picture);
                 await _localStorage.SetItem("userInfo", userInfo);
-
                 await _jsRuntime.InvokeVoidAsync("alert", "You are now logged-in.");
             }
             // redirect 
